Melhorias casos de uso 04 e 05